--- a/style.css
+++ b/style.css
@@ -173,6 +173,12 @@ footer h6 {
   left: 20%;
 }
 
+body {
+  background-image: url(./resorces/Rectangle.svg);
+  background-repeat: no-repeat;
+  background-position: 100% 100%;
+}
+
 .tablet {
   display: none;
 }
@@ -218,6 +224,10 @@ footer h6 {
   }
   .phone {
     display: none;
+  }
+
+  .tablet {
+    display: flex;
   }
 
   .info {
@@ -274,6 +284,23 @@ footer h6 {
     padding: 0px 164px 0px 167px;
   }
 
+  .top button:hover {
+    background-color: var(--Darkblue);
+    color: var(--creamwhite);
+    cursor: pointer;
+    transition: 0.2s;
+  }
+
+  .text button:hover {
+    cursor: pointer;
+    background: linear-gradient(
+      135deg,
+      #a060ff 0%,
+      #cb30e3 49.21%,
+      #ffa84e 100%
+    );
+  }
+
   h2 {
     font-size: 72px;
     margin-right: 250px;
@@ -283,6 +310,10 @@ footer h6 {
     margin-left: 300px;
     width: 287px;
     height: 36px;
+  }
+
+  .text p {
+    margin-right: 570px;
   }
 
   .combine {
@@ -329,7 +360,19 @@ footer h6 {
 
   .description {
     padding-top: 0px;
+    padding-right: 67px;
     height: 545px;
+  }
+
+  /* .description .relative {
+    width: 375px;
+    height: 600px;
+    position: relative;
+    right: 200px;
+  } */
+
+  .description p {
+    font-size: 20px;
   }
 
   .curvature2 {
@@ -339,10 +382,27 @@ footer h6 {
     top: 120px;
   }
 
+  footer .socialmedia img:hover {
+    cursor: pointer;
+    opacity: 0.5;
+  }
+
   .absolute {
     width: 360px;
     height: 589.56px;
     top: 133.8%;
     left: 20%;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  body {
+    background-size: 100%;
+  }
+}
+
+@media screen and (min-width: 1500px) {
+  .absolute {
+    top: 129.9%;
   }
 }
